# Archiver

./: CMakeLists.txt  README.md  main.cpp
header/: App.hpp
src/: App.cpp  Execution.cpp  Logic.cpp  Validation.cpp
